--- a/notebooks/02_deploy_model_dbx.ipynb
+++ b/notebooks/02_deploy_model_dbx.ipynb
@@ -386,6 +386,7 @@
     "\n",
     "model_version = client.get_model_version_by_alias(uc_model_name, \"Champion\")\n",
     "served_entity_name = {model_name.split(\"/\")[-1]}\n",
+    "user_email = dbutils.notebook.entry_point.getDbutils().notebook().getContext().userName().get()\n",
     "\n",
     "served_entities = [\n",
     "    ServedEntityInput(\n",
@@ -414,10 +415,10 @@
     "                auto_capture_config=None\n",
     "            ),\n",
     "            tags=[\n",
-    "                EndpointTag(key=\"application\", value=model_name),\n",
-    "                EndpointTag(key=\"created_by\", value=\"srijit.nair@databricks.com\")\n",
+    "                EndpointTag(key=\"application\", value=served_entity_name),\n",
+    "                EndpointTag(key=\"created_by\", value=user_email)\n",
     "            ],\n",
-    "            timeout = timedelta(minutes=180) #wait upto three hours. some models take very long\n",
+    "            timeout = timedelta(minutes=180) # wait up to three hours\n",
     "        )"
    ]
   }
