Update logic for quantization and fixed string errors
- Fixed string errors with cache_volume.
- Editted some debugging with print statements
- Loaded the quantization based on quantization type parameter in config
- Updated the logic to clear VRAM properly

--- a/notebooks/02_deploy_model_dbx.ipynb
+++ b/notebooks/02_deploy_model_dbx.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a34a8bb",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "21285c5b-0e29-41d2-a1c6-db0240f989a9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%pip install -r requirements.txt"
@@ -12,9 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9bcef310",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2a61d846-1b1e-43a3-aa95-350275572ee6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%pip install databricks-sdk==0.50.0\n",
@@ -23,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84e9a92f",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1f81f7fb-4800-4acd-8fe1-607f522bc021",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from transformers import AutoProcessor, AutoModelForCausalLM, BitsAndBytesConfig\n",
@@ -38,9 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "72412e58",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "30cbcfe6-c587-40ad-897c-bacfed74394c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import yaml \n",
@@ -60,28 +104,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94343856",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a15ea5c8-c862-4dda-9aec-3cc153da45e4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "cache_volume =  f\"/Volumes/{catalog_name}/{schema_name}/{}/{volume_name}/{revision}/{volume_folder}\"\n",
+    "cache_volume =  f\"/Volumes/{catalog_name}/{schema_name}/{volume_name}/{model_name}/{revision}/{volume_folder}\"\n",
     "cache_hf = \"/local_disk0/hf_cache\"\n",
-    "cache_local = \"/local_disk0/{volume_folder}\" \n",
+    "cache_local = f\"/local_disk0/{volume_folder}\" \n",
     "\n",
     "os.environ[\"HF_HOME\"] = cache_hf\n",
     "os.environ[\"HF_HUB_CACHE\"] = cache_hf\n",
     "os.environ[\"HF_HUB_DISABLE_SYMLINKS_WARNING\"] = \"True\"\n",
     "os.environ[\"HF_HUB_DOWNLOAD_TIMEOUT\"] = \"1000\"\n",
-    "os.environ['HF_HUB_ENABLE_HF_TRANSFER'] = '1'  # Enables optimized download backend"
+    "os.environ['HF_HUB_ENABLE_HF_TRANSFER'] = '1'  # Enables optimized download backend\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b3d1fc7",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bc2548a3-7b5b-4106-9beb-18b1d9055f57",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import shutil\n",
@@ -100,37 +166,59 @@
     "    except Exception as e: \n",
     "        print(f\"Error: {e}\")\n",
     "else:\n",
-    "    print(\"File exists locally\")"
+    "    print(f\"File already exists locally at {cache_local}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15b62f40",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d11a18a9-14b9-4c25-b348-15f24de72670",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "# import torch\n",
+    "# from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(cache_local)\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(cache_local)\n",
     "\n",
-    "# Set pad_token \n",
-    "if tokenizer.pad_token is None:\n",
-    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "# # Set pad_token \n",
+    "# if tokenizer.pad_token is None:\n",
+    "#     tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    cache_local,\n",
-    "    torch_dtype=torch.bfloat16,\n",
-    "    device_map=\"auto\"\n",
-    ")"
+    "# model = AutoModelForCausalLM.from_pretrained(\n",
+    "#     cache_local,\n",
+    "#     torch_dtype=torch.bfloat16,\n",
+    "#     device_map=\"auto\"\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2d8d3d0b",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8211addb-53b6-4e28-836a-84b75b88bc3c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -160,6 +248,11 @@
     "            self.model_id,\n",
     "            torch_dtype=self.dtype\n",
     "        ).to(device=self.device)\n",
+    "\n",
+    "        print(\"************************************\")\n",
+    "        print(f\"Successfully loaded model and tokenizer to {self.device}\")\n",
+    "        print(\"************************************\")\n",
+    "\n",
     "\n",
     "    def predict(self, model_input: pd.DataFrame, params: dict = None) -> pd.Series:\n",
     "        outputs = []\n",
@@ -198,9 +291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0292a6e",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "23509f49-d9b4-4239-a194-a31641b8a119",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -227,8 +331,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c33a24",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "545a552b-18da-4b89-982b-79b173e48af4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "%md\n",
     "### Bug when logging artifacts where model serving will not use the full path:\n",
@@ -237,9 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36c82778",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fa171adb-b5b6-4a75-9570-f1c92877e316",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -256,9 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e21080e7",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dcbba91a-7e12-4daf-8917-097afbb68a8e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# This will infere signature from the input and output dataframes\n",
@@ -283,12 +417,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31292441",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4393c534-4228-400b-9e2e-d80c69f84efc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
-    "\n",
     "try:\n",
     "    result = mlflow.register_model(\n",
     "        model_uri=model_info.model_uri,\n",
@@ -302,9 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c493727f",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d4798aa9-e362-49f7-b0a6-7f099c88707c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import mlflow\n",
@@ -319,9 +474,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64b1cc82",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "92717db6-a0cb-4e6c-8208-fe2b36f3fa56",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import mlflow \n",
@@ -330,10 +496,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4ce37e5f-bc7d-4f21-adaf-ea179da6e71b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Can restart the session (%restart_python) and reload config variables if needed for VRAM requirements"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "51444f1b",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6e43ff65-a64f-4e65-bf72-ed89f016a383",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "loaded_model = mlflow.pyfunc.load_model(model_uri)"
@@ -341,9 +534,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4441e2aa",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "aac08506-3cc2-4c59-8fbf-df8f238901bb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -358,18 +562,100 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "533c164f",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c3c75f3d-921f-4fc3-8bbb-7e7f366063fc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
    "source": [
-    "print(outputs[0])"
+    "if outputs[0] is not None:\n",
+    "  print(outputs[0])\n",
+    "  client.set_registered_model_alias(\n",
+    "      name=uc_model_name,\n",
+    "      alias=\"Champion\",\n",
+    "      version=result.version\n",
+    ")\n",
+    "  print(\"***************************\")\n",
+    "  print(\"Model promoted to Champion!\")\n",
+    "  print(\"***************************\")\n",
+    "\n",
+    "else:\n",
+    "  print(\"Model failed to load so cannot promote to Champion\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3c7199c",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ca1b31d8-3aa3-44ea-ba3e-f34e94ce9f98",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(client.get_model_version_by_alias(uc_model_name, \"Champion\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "54c0f89b-b8ae-4298-ac75-896532dffe04",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model_info = client.get_model_version_by_alias(uc_model_name, \"Champion\")\n",
+    "model_name = model_info.name\n",
+    "model_version = model_info.version\n",
+    "served_entity_name = served_model_name\n",
+    "user_email = dbutils.notebook.entry_point.getDbutils().notebook().getContext().userName().get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ce773544-e835-4525-84c3-89eb52ffa4b8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -383,10 +669,6 @@
     "        ServingModelWorkloadType,\n",
     "        EndpointTag\n",
     "    )\n",
-    "\n",
-    "model_version = client.get_model_version_by_alias(uc_model_name, \"Champion\")\n",
-    "served_entity_name = {model_name.split(\"/\")[-1]}\n",
-    "user_email = dbutils.notebook.entry_point.getDbutils().notebook().getContext().userName().get()\n",
     "\n",
     "served_entities = [\n",
     "    ServedEntityInput(\n",
@@ -421,13 +703,78 @@
     "            timeout = timedelta(minutes=180) # wait up to three hours\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5377ac8e-c13c-4e0c-8dd7-4a00270d7233",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Restart to clear VRAM from the GPU (only for this notebook session)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9d1205e7-aaf0-48a8-ab32-6692e2408287",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%restart_python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2fca97a6-b47c-414e-9ce1-5abf5c4b0aa3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 2
+   },
+   "notebookName": "02_deploy_model_dbx",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
