--- a/notebooks/01_download_model.ipynb
+++ b/notebooks/01_download_model.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a462f41f",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d8e2ca37-8474-4d29-8b53-94a6f3e1706f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%pip install -r requirements.txt\n",
@@ -13,9 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "602757bc",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0b04c181-8dde-476f-bedf-f253a8903e0a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import yaml\n",
@@ -30,14 +52,26 @@
     "model_name = config.get(\"model_name\")\n",
     "revision = config.get(\"revision\")\n",
     "secret_scope = config.get(\"secret_scope\")\n",
-    "secret_key = config.get(\"secret_key\")"
+    "secret_key = config.get(\"secret_key\")\n",
+    "quantization_type = config.get(\"quantization_type\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8b2f52ce",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1484729f-b753-4a08-a3ea-96d53b594001",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from transformers import AutoProcessor, AutoModelForCausalLM, BitsAndBytesConfig\n",
@@ -50,15 +84,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "142a1056",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d583bfa4-119c-42cc-9023-80882d57fdd1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "cache_remote =  f\"/Volumes/{catalog_name}/{schema_name}/{}/{volume_name}/{revision}/{volume_folder}\"\n",
+    "cache_volume =  f\"/Volumes/{catalog_name}/{schema_name}/{volume_name}/{model_name}/{revision}/{volume_folder}\"\n",
     "cache_hf = \"/local_disk0/hf_cache\"\n",
-    "cache_local = \"/local_disk0/{volume_folder}\" \n",
+    "cache_local = f\"/local_disk0/{volume_folder}\" \n",
     "\n",
     "os.environ[\"HF_HOME\"] = cache_hf\n",
     "os.environ[\"HF_HUB_CACHE\"] = cache_hf\n",
@@ -69,9 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "586e81f8",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "91d8648f-dcae-4fc0-8401-3a44334bce95",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from huggingface_hub import login, snapshot_download\n",
@@ -81,9 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55ec8044",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "887bd783-ce50-45a2-a5ce-43fbbc24ffff",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
@@ -96,17 +163,20 @@
     "\n",
     "quantization_config = None\n",
     "\n",
-    "# NOTE: Uncomment to use 4bit quantization\n",
-    "# quantization_config = BitsAndBytesConfig(\n",
-    "#     load_in_4bit=True,\n",
-    "#     bnb_4bit_use_double_quant=True,\n",
-    "#     bnb_4bit_quant_type=\"nf4\",\n",
-    "# )\n",
+    "if quantization_type == \"4bit\":\n",
+    "    quantization_config = BitsAndBytesConfig(\n",
+    "        load_in_4bit=True,\n",
+    "        bnb_4bit_use_double_quant=True,\n",
+    "        bnb_4bit_quant_type=\"nf4\",\n",
+    "    )\n",
+    "    print(\"Using 4bit quantization\")\n",
     "\n",
-    "# NOTE: Uncomment to use 8bit quantization\n",
-    "# quantization_config = BitsAndBytesConfig(\n",
-    "#     load_in_8bit=True,\n",
-    "# )\n",
+    "if quantization_type == \"8bit\":\n",
+    "    quantization_config = BitsAndBytesConfig(\n",
+    "        load_in_8bit=True,\n",
+    "    )\n",
+    "    print(\"Using 8bit quantization\")\n",
+    "\n",
     "\n",
     "if quantization_config is not None:\n",
     "    model = AutoModelForCausalLM.from_pretrained(\n",
@@ -128,9 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d63e3587",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c2d550b6-5653-49e1-8f1e-07ed6ffd9526",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "tokenizer.save_pretrained(cache_local)\n",
@@ -139,30 +220,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d493f65e",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e1c8fd38-c7f1-47ea-a606-1f7aaa9afe95",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import shutil\n",
     "try:\n",
-    "    dbutils.fs.mkdirs(cache_remote)\n",
+    "    dbutils.fs.mkdirs(cache_volume)\n",
     "except Exception as e:\n",
     "    print(f\"Error creating directory: {e}\")\n",
     "\n",
     "try:\n",
-    "    shutil.copytree(cache_local, cache_remote, dirs_exist_ok=True) \n",
-    "    print(f\"Successfully copied directory from {cache_local} to {cache_remote}\")\n",
+    "    shutil.copytree(cache_local, cache_volume, dirs_exist_ok=True) \n",
+    "    print(f\"Successfully copied directory from {cache_local} to {cache_volume}\")\n",
     "except Exception as e:\n",
     "    print(f\"Error copying directory: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5eb77cc5-638e-4ca7-b5d7-33dda3ee0adf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Restart to clear VRAM from the GPU (only for this notebook session)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "198c2906-9266-4c6b-91c4-c45ff5184ea2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%restart_python"
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 2
+   },
+   "notebookName": "01_download_model",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
