Updated support for olmocr and folder structure
- Updated the create_secrets to be in the setup along with unity catalog asset creation
- Updated the download for olmocr 7b
- Update inference from volumes with OCR for a PDF from arxiv

--- a/setup/00_create_secrets.ipynb
+++ b/setup/00_create_secrets.ipynb
@@ -21,7 +21,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5fd8500e-d32d-4fe4-8649-8794351e409a",
      "showTitle": false,
@@ -38,7 +41,7 @@
     "\n",
     "secret_scope = config.get(\"secret_scope\")\n",
     "secret_key = config.get(\"secret_key\")\n",
-    "secret_value = \"CHANGE_ME\""
+    "secret_value = config.get(\"secret_value\")"
    ]
   },
   {
