Updated sample configs and started deployment notebook

--- a/vllm_ocr_model_notebooks/03_deploy_vllm.ipynb
+++ b/vllm_ocr_model_notebooks/03_deploy_vllm.ipynb
@@ -280,13 +280,13 @@
    },
    "outputs": [],
    "source": [
-    "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
+    "sys_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
     "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
     "\n",
     "messages=[\n",
     "        {\n",
     "            \"role\": \"system\",\n",
-    "            \"content\": [{\"type\":\"text\",\"text\": system_prompt}]\n",
+    "            \"content\": [{\"type\":\"text\",\"text\": sys_prompt}]\n",
     "        },\n",
     "        {\n",
     "            \"role\": \"user\", \n",
@@ -477,22 +477,6 @@
    "source": [
     "%restart_python"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "a0d94d6e-8205-4bf1-8d5e-ddbd1f4a07ab",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -514,7 +498,7 @@
     },
     "pythonIndentUnit": 2
    },
-   "notebookName": "02_test_inference",
+   "notebookName": "03_deploy_vllm",
    "widgets": {}
   },
   "language_info": {
