Updated deployment notebook and config files
Split sample configs based on model / model type
Updated test inference to have the correct variables
Updated deploy VLLM with pyfunc class for proper deployment

--- a/vllm_ocr_model_notebooks/02_test_inference.ipynb
+++ b/vllm_ocr_model_notebooks/02_test_inference.ipynb
@@ -64,6 +64,7 @@
    "outputs": [],
    "source": [
     "import yaml\n",
+    "import os\n",
     "\n",
     "with open(\"../configs/config.yaml\", \"r\") as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -76,28 +77,8 @@
     "revision = config.get(\"revision\")\n",
     "secret_scope = config.get(\"secret_scope\")\n",
     "secret_key = config.get(\"secret_key\")\n",
-    "quantization_type = config.get(\"quantization_type\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "66766424-6631-4b82-a518-6fc9cf05761a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
+    "quantization_type = config.get(\"quantization_type\")\n",
+    "\n",
     "cache_volume =  f\"/Volumes/{catalog_name}/{schema_name}/{volume_name}/{model_name}/{revision}/{volume_folder}\"\n",
     "cache_hf = \"/local_disk0/hf_cache\"\n",
     "cache_local = f\"/local_disk0/{volume_folder}\" \n",
@@ -477,22 +458,6 @@
    "source": [
     "%restart_python"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "a0d94d6e-8205-4bf1-8d5e-ddbd1f4a07ab",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
