Updated olmocr support including deployment  (#8)
* Updated Configs

* Updated gitignore

* Updated sample configs and started deployment notebook

* Updated deployment notebook and config files

Split sample configs based on model / model type
Updated test inference to have the correct variables
Updated deploy VLLM with pyfunc class for proper deployment

---------

Co-authored-by: willsmithDB <willsmithDB>

--- a/vllm_ocr_model_notebooks/02_test_inference.ipynb
+++ b/vllm_ocr_model_notebooks/02_test_inference.ipynb
@@ -64,6 +64,7 @@
    "outputs": [],
    "source": [
     "import yaml\n",
+    "import os\n",
     "\n",
     "with open(\"../configs/config.yaml\", \"r\") as f:\n",
     "    config = yaml.safe_load(f)\n",
@@ -76,28 +77,8 @@
     "revision = config.get(\"revision\")\n",
     "secret_scope = config.get(\"secret_scope\")\n",
     "secret_key = config.get(\"secret_key\")\n",
-    "quantization_type = config.get(\"quantization_type\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "66766424-6631-4b82-a518-6fc9cf05761a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
+    "quantization_type = config.get(\"quantization_type\")\n",
+    "\n",
     "cache_volume =  f\"/Volumes/{catalog_name}/{schema_name}/{volume_name}/{model_name}/{revision}/{volume_folder}\"\n",
     "cache_hf = \"/local_disk0/hf_cache\"\n",
     "cache_local = f\"/local_disk0/{volume_folder}\" \n",
@@ -280,13 +261,13 @@
    },
    "outputs": [],
    "source": [
-    "sys_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
+    "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
     "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
     "\n",
     "messages=[\n",
     "        {\n",
     "            \"role\": \"system\",\n",
-    "            \"content\": [{\"type\":\"text\",\"text\": sys_prompt}]\n",
+    "            \"content\": [{\"type\":\"text\",\"text\": system_prompt}]\n",
     "        },\n",
     "        {\n",
     "            \"role\": \"user\", \n",
@@ -491,7 +472,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5261002272479771,
+     "commandId": 5261002272481229,
      "dataframes": [
       "_sqldf"
      ]
