Updated endpoint testing

--- a/vllm_ocr_model_notebooks/03_deploy_vllm.ipynb
+++ b/vllm_ocr_model_notebooks/03_deploy_vllm.ipynb
@@ -753,9 +753,10 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "databricks_token = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()\n",
-    "os.environ[\"DATABRICKS_TOKEN\"] = databricks_token"
+    "os.environ[\"DATABRICKS_TOKEN\"] = databricks_token\n",
+    "\n",
+    "endpoint_url = \"CHANGE_ME\""
    ]
   },
   {
@@ -778,15 +779,22 @@
    "source": [
     "import pandas as pd\n",
     "import json\n",
-    "import io\n",
     "import base64\n",
     "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "from pdf2image import convert_from_bytes\n",
     "\n",
+    "url = \"https://arxiv.org/pdf/2502.13923\"\n",
+    "response = requests.get(url)\n",
+    "pdf_bytes = response.content\n",
+    "    \n",
+    "pil_images = convert_from_bytes(pdf_bytes)\n",
     "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
     "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
     "\n",
     "img = pil_images[0]\n",
-    "buffer = io.BytesIO()\n",
+    "buffer = BytesIO()\n",
     "img.save(buffer, format=\"PNG\")\n",
     "image_base64 = base64.b64encode(buffer.getvalue()).decode('utf-8')\n",
     "\n",
@@ -829,7 +837,7 @@
     "    return {'inputs': {name: data[name].tolist() for name in data.keys()} if isinstance(data, dict) else data.tolist()}\n",
     "\n",
     "def score_model(dataset):\n",
-    "    url = endpoint_details.endpoint_url\n",
+    "    url = endpoint_url,\n",
     "    headers = {'Authorization': f'Bearer {os.environ.get(\"DATABRICKS_TOKEN\")}', 'Content-Type': 'application/json'}\n",
     "    ds_dict = {'dataframe_split': dataset.to_dict(orient='split')} if isinstance(dataset, pd.DataFrame) else create_tf_serving_json(dataset)\n",
     "    data_json = json.dumps(ds_dict, allow_nan=True)\n",
