Updated files to support nuextract 2 8b

--- a/vllm_ocr_model_notebooks/01_download_model.ipynb
+++ b/vllm_ocr_model_notebooks/01_download_model.ipynb
@@ -55,6 +55,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "773a05f4-7745-431e-bc71-7ce80368575c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.widgets.text(\"config\", \"olmocr_config\", \"Configuration File\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "0b04c181-8dde-476f-bedf-f253a8903e0a",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -66,7 +87,9 @@
     "import yaml\n",
     "import os\n",
     "\n",
-    "with open(\"../configs/config.yaml\", \"r\") as f:\n",
+    "config_path = dbutils.widgets.get(\"config\")\n",
+    "\n",
+    "with open(f\"../configs/{config_path}.yaml\", \"r\") as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
     "catalog_name = config.get(\"catalog_name\")\n",
@@ -86,7 +109,9 @@
     "os.environ[\"HF_HOME\"] = cache_hf\n",
     "os.environ[\"HF_HUB_CACHE\"] = cache_hf\n",
     "os.environ[\"HF_HUB_DISABLE_SYMLINKS_WARNING\"] = \"True\"\n",
-    "os.environ[\"HF_HUB_DOWNLOAD_TIMEOUT\"] = \"1000\""
+    "os.environ[\"HF_HUB_DOWNLOAD_TIMEOUT\"] = \"1000\"\n",
+    "\n",
+    "print(f\"Loaded Config: {config}\")"
    ]
   },
   {
@@ -286,6 +311,22 @@
    "source": [
     "%restart_python"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b471eadc-e59f-43d9-8cdc-7ddfc98127ae",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -314,7 +355,34 @@
     "pythonIndentUnit": 2
    },
    "notebookName": "01_download_model",
-   "widgets": {}
+   "widgets": {
+    "config": {
+     "currentValue": "olmocr_config",
+     "nuid": "ec9f5aa6-ea09-4436-9101-a590d4f16e79",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "config",
+      "label": "Configuration File",
+      "name": "config",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "config",
+      "label": "Configuration File",
+      "name": "config",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
