--- a/vllm_ocr_model_notebooks/02a_nuextract_test_inference.ipynb
+++ b/vllm_ocr_model_notebooks/02a_nuextract_test_inference.ipynb
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.widgets.text(\"config\", \"olmocr_config\", \"Configuration File\")"
+    "dbutils.widgets.text(\"config\", \"nuextract_config\", \"Configuration File\")"
    ]
   },
   {
@@ -278,6 +278,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "cc9273dc-64b1-4ff7-a72b-9c2033580b78",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%pip install qwen-vl-utils[decord]==0.0.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "30ba2054-21a6-4681-b29c-7dedc0e74b64",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -313,7 +334,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a4b39caa-71ae-488a-a0a8-a1a9c1159db1",
+     "nuid": "e3a1628f-15c2-48d3-a8f2-7138157f4563",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -321,61 +342,46 @@
    },
    "outputs": [],
    "source": [
-    "text = processor.apply_chat_template(\n",
-    "    messages, tokenize=False, add_generation_prompt=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cc9273dc-64b1-4ff7-a72b-9c2033580b78",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%pip install qwen-vl-utils[decord]==0.0.8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "b7131072-dd16-47ff-8857-0f6bb3db1326",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from transformers import Qwen2_5_VLForConditionalGeneration, AutoTokenizer, AutoProcessor\n",
-    "from qwen_vl_utils import process_vision_info\n",
+    "template = \"\"\"{\"extracted_text\": \"verbatim-string\"}\"\"\"\n",
+    "document = {\"type\": \"image\", \"image\": pil_images[0]}\n",
     "\n",
-    "image_inputs, video_inputs = process_vision_info(messages)\n",
+    "messages = [{\"role\": \"user\", \"content\": [document]}]\n",
+    "text = processor.tokenizer.apply_chat_template(\n",
+    "    messages,\n",
+    "    template=template,\n",
+    "    tokenize=False,\n",
+    "    add_generation_prompt=True,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e0fc3383-b389-4f99-a972-b7bfb063cea8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "from inference_functions import process_all_vision_info_for_nuextract\n",
+    "\n",
+    "image_inputs = process_all_vision_info_for_nuextract(messages)\n",
     "inputs = processor(\n",
     "    text=[text],\n",
     "    images=image_inputs,\n",
-    "    videos=video_inputs,\n",
     "    padding=True,\n",
     "    return_tensors=\"pt\",\n",
-    ")"
+    ").to(\"cuda\")"
    ]
   },
   {
@@ -388,7 +394,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "19edd724-06e7-4a37-9a92-bf3c898319d7",
+     "nuid": "692ab873-3a44-4735-adf5-8a89431bcdac",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -396,28 +402,14 @@
    },
    "outputs": [],
    "source": [
-    "inputs = inputs.to(\"cuda\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "83743b21-b09d-4fd3-a1ad-6857aefb66e9",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "generated_ids = model.generate(**inputs, max_new_tokens=512)\n",
+    "\n",
+    "generation_config = {\"do_sample\": False, \"num_beams\": 1, \"max_new_tokens\": 2048}\n",
+    "\n",
+    "# Inference: Generation of the output\n",
+    "generated_ids = model.generate(\n",
+    "    **inputs,\n",
+    "    **generation_config\n",
+    ")\n",
     "generated_ids_trimmed = [\n",
     "    out_ids[len(in_ids) :] for in_ids, out_ids in zip(inputs.input_ids, generated_ids)\n",
     "]"
@@ -433,7 +425,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a635d118-8b4b-4f4c-b3f2-0f862b70b0be",
+     "nuid": "4b7f3717-a2b4-4e8b-9703-d0c3f006bb47",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -444,7 +436,8 @@
     "output_text = processor.batch_decode(\n",
     "    generated_ids_trimmed, skip_special_tokens=True, clean_up_tokenization_spaces=False\n",
     ")\n",
-    "print(output_text)"
+    "print(output_text)\n",
+    "# ['{\"store\": \"Trader Joe\\'s\"}']"
    ]
   },
   {
@@ -497,21 +490,21 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5261002272481229,
+     "commandId": 2254899697799887,
      "dataframes": [
       "_sqldf"
      ]
     },
     "pythonIndentUnit": 2
    },
-   "notebookName": "02_test_inference",
+   "notebookName": "02a_nuextract_test_inference",
    "widgets": {
     "config": {
      "currentValue": "nuextract_config",
      "nuid": "65870d79-6cfc-41b9-bd1a-2550fd885416",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "config",
+      "defaultValue": "config.yaml",
       "label": "Configuration File",
       "name": "config",
       "options": {
@@ -522,7 +515,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "config",
+      "defaultValue": "config.yaml",
       "label": "Configuration File",
       "name": "config",
       "options": {
