Updated NuExtract files with deployment pending

--- a/vllm_ocr_model_notebooks/02a_nuextract_test_inference.ipynb
+++ b/vllm_ocr_model_notebooks/02a_nuextract_test_inference.ipynb
@@ -436,8 +436,7 @@
     "output_text = processor.batch_decode(\n",
     "    generated_ids_trimmed, skip_special_tokens=True, clean_up_tokenization_spaces=False\n",
     ")\n",
-    "print(output_text)\n",
-    "# ['{\"store\": \"Trader Joe\\'s\"}']"
+    "print(output_text)"
    ]
   },
   {
@@ -504,7 +503,7 @@
      "nuid": "65870d79-6cfc-41b9-bd1a-2550fd885416",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "config.yaml",
+      "defaultValue": "nuextract_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
@@ -515,7 +514,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "config.yaml",
+      "defaultValue": "nuextract_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
